@@ -7,8 +7,8 @@ import lombok.NoArgsConstructor;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.lang.reflect.Type;
-import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
@@ -60,7 +60,7 @@ public class DataUtils {
     try {
       Files.write(Paths.get(root + filename), content.getBytes());
     } catch (IOException e) {
-      throw new IllegalStateException("Could not write to file '" + filename + "'", e);
+      throw new UncheckedIOException("Could not write to file '" + filename + "'", e);
     }
   }
   
@@ -72,10 +72,9 @@ public class DataUtils {
    */
   public static String readFile(String filename) {
     try {
-      return new String(Files.readAllBytes(Paths.get(filename)),
-                        Charset.forName("UTF-8"));
+      return Files.readString(Paths.get(filename));
     } catch (IOException e) {
-      throw new IllegalStateException("Could not read file '" + filename + "'", e);
+      throw new UncheckedIOException("Could not read file '" + filename + "'", e);
     }
   }
 
@@ -89,7 +88,7 @@ public class DataUtils {
     try {
       return Files.readAllLines(Paths.get(filename));
     } catch (IOException e) {
-      throw new IllegalStateException("Could not read from file '" + filename + "'", e);
+      throw new UncheckedIOException("Could not read from file '" + filename + "'", e);
     }
   }
   
@@ -101,18 +100,6 @@ public class DataUtils {
    */
   public String toJson(Object o) {
     return getGson().toJson(o);
-  }
-  
-  /**
-   * Deserializes JSON to the specified class.
-   *
-   * @param <T> the result type
-   * @param json the JSON text to deserialize
-   * @param classOfT the class of the resulting object
-   * @return resulting object
-   */
-  public <T> T fromJson(String json, Class<T> classOfT) {
-    return getGson().fromJson(json, classOfT);
   }
 
   /**
